Added get_conversation methods to API
